--- a/package.json
+++ b/package.json
@@ -1,21 +1,37 @@
 {
-  "name": "forhives-front",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "autoprefixer": "10.4.14",
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.3.1",
-    "next": "13.3.1",
-    "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1"
-  }
+	"name": "forhives-front",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"prettier": "prettier --write .",
+		"precommit": "lint-staged",
+		"prepare": "husky install"
+	},
+	"lint-staged": {
+		"*.js": [
+			"prettier --write",
+			"git add"
+		]
+	},
+	"dependencies": {
+		"autoprefixer": "10.4.14",
+		"next": "13.3.1",
+		"postcss": "8.4.23",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"tailwindcss": "3.3.1",
+		"sharp": "0.32.0"
+	},
+	"devDependencies": {
+		"eslint": "8.39.0",
+		"husky": "8.0.3",
+		"eslint-config-next": "13.3.1",
+		"prettier": "2.8.7",
+		"prettier-plugin-tailwindcss": "0.2.7",
+		"lint-staged": "13.2.1"
+	}
 }
