--- a/package.json
+++ b/package.json
@@ -19,19 +19,20 @@
 	},
 	"dependencies": {
 		"autoprefixer": "10.4.18",
-		"next": "13.5.6",
+		"next": "14.1.3",
 		"postcss": "8.4.35",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"tailwindcss": "3.4.1",
-		"sharp": "0.32.0"
+		"sharp": "0.33.2"
 	},
 	"devDependencies": {
+		"husky": "9.0.11",
 		"eslint": "8.57.0",
-		"husky": "8.0.3",
-		"eslint-config-next": "13.5.6",
-		"prettier": "2.8.7",
-		"prettier-plugin-tailwindcss": "0.5.7",
+		"eslint-config-next": "14.1.3",
+		"eslint-config-prettier": "9.1.0",
+		"prettier": "3.2.5",
+		"prettier-plugin-tailwindcss": "0.5.12",
 		"lint-staged": "15.2.2"
 	}
 }
