--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -10,6 +10,18 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      - name: Use Node.js 20.x
+        uses: actions/setup-node@v4
+        with:
+          cache: 'npm'
+          node-version: 20.x
+      - name: Install dependencies in production
+        run: npm ci --ignore-scripts
+      - name: Build the app
+        continue-on-error: false
+        run: npm run build
+      - name: List files
+        run: ls -la
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
