Add initial project files and configurations
- Added .env.example with NEXT_PUBLIC_SITE_URL
- Added .eslintrc.json configuration for next/core-web-vitals
- Updated .gitignore to include *.tsbuildinfo and next-env.d.ts
- Created CHANGELOG.md with version updates and fixes
- Included LICENSE.md detailing Tailwind UI license terms
- Created README.md with project overview and setup instructions

These changes were made to set up the initial project structure, configurations, version control guidelines, licensing information, and project documentation.

--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
 # local env files
 .env*.local
@@ -31,7 +30,9 @@ yarn-error.log*
 # vercel
 .vercel
 
-../.idea
-.pnpm-lock.yaml
+# typescript
+*.tsbuildinfo
+next-env.d.ts
 
-.env
+bun.lockb
+.idea
