--- a/old/package.json
+++ b/old/package.json
@@ -7,7 +7,7 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"prettier": "prettier --write .",
+		"prettier": "prettier --write ..",
 		"precommit": "lint-staged",
 		"prepare": "husky install"
 	},
