--- a/package.json
+++ b/package.json
@@ -3,10 +3,24 @@
   "version": "1.0.0",
   "private": false,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -H 0.0.0.0",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "prettier": "prettier --write .",
+    "precommit": "lint-staged",
+    "prepare": "husky",
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --write",
+      "eslint --fix"
+    ],
+    "*.json": "prettier --write",
+    "*.css": "prettier --write"
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
@@ -16,6 +30,9 @@
     "autoprefixer": "^10.4.16",
     "cheerio": "^1.0.0-rc.12",
     "clsx": "^2.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-perfectionist": "^2.11.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "feed": "^4.2.2",
     "mdast-util-to-string": "^4.0.0",
     "mdx-annotations": "^0.1.4",
@@ -36,7 +53,7 @@
   },
   "devDependencies": {
     "eslint": "^8.56.0",
-    "eslint-config-next": "^14.0.4",
+    "eslint-config-next": "^14.2.4",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "sharp": "0.33.1"
