--- a/package.json
+++ b/package.json
@@ -1,62 +1,63 @@
 {
-  "name": "forhives",
-  "version": "1.0.0",
-  "private": false,
-  "scripts": {
-    "dev": "next dev -H 0.0.0.0",
-    "build": "next build",
-    "start": "next start",
-    "prettier": "prettier --write .",
-    "precommit": "lint-staged",
-    "prepare": "husky",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
-    "format": "prettier --write .",
-    "format:check": "prettier --check ."
-  },
-  "lint-staged": {
-    "*.js": [
-      "prettier --write",
-      "eslint --fix"
-    ],
-    "*.json": "prettier --write",
-    "*.css": "prettier --write"
-  },
-  "browserslist": "defaults, not ie <= 11",
-  "dependencies": {
-    "@mdx-js/loader": "^3.0.0",
-    "@mdx-js/react": "^3.0.0",
-    "@next/mdx": "^14.0.4",
-    "autoprefixer": "^10.4.16",
-    "cheerio": "^1.0.0-rc.12",
-    "clsx": "^2.1.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-no-only-tests": "^3.1.0",
-    "eslint-plugin-perfectionist": "^2.11.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "feed": "^4.2.2",
-    "mdast-util-to-string": "^4.0.0",
-    "mdx-annotations": "^0.1.4",
-    "motion": "^10.17.0",
-    "next": "^14.0.4",
-    "next-themes": "^0.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "recma-import-images": "^0.0.3",
-    "rehype-autolink-headings": "^7.1.0",
-    "rehype-slug": "^6.0.0",
-    "remark-gfm": "^4.0.0",
-    "remark-rehype-wrap": "^0.0.3",
-    "remark-unwrap-images": "^4.0.0",
-    "shiki": "^0.14.7",
-    "tailwindcss": "^3.4.1",
-    "unist-util-visit": "^5.0.0"
-  },
-  "devDependencies": {
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^14.2.4",
-    "prettier": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.5",
-    "sharp": "0.33.1"
-  }
+	"name": "forhives",
+	"version": "1.0.0",
+	"private": false,
+	"scripts": {
+		"dev": "next dev -H 0.0.0.0",
+		"build": "next build",
+		"start": "next start",
+		"prettier": "prettier --write .",
+		"precommit": "lint-staged",
+		"prepare": "husky",
+		"lint": "next lint",
+		"lint:fix": "next lint --fix",
+		"format": "prettier --write .",
+		"format:check": "prettier --check ."
+	},
+	"lint-staged": {
+		"*.js": [
+			"prettier --write",
+			"eslint --fix"
+		],
+		"*.json": "prettier --write",
+		"*.css": "prettier --write"
+	},
+	"browserslist": "defaults, not ie <= 11",
+	"dependencies": {
+		"@mdx-js/loader": "^3.0.0",
+		"@mdx-js/react": "^3.0.0",
+		"@next/mdx": "^14.0.4",
+		"autoprefixer": "^10.4.16",
+		"cheerio": "^1.0.0-rc.12",
+		"clsx": "^2.1.0",
+		"commander": "^12.1.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-no-only-tests": "^3.1.0",
+		"eslint-plugin-perfectionist": "^2.11.0",
+		"eslint-plugin-prettier": "^5.1.3",
+		"feed": "^4.2.2",
+		"mdast-util-to-string": "^4.0.0",
+		"mdx-annotations": "^0.1.4",
+		"motion": "^10.17.0",
+		"next": "^14.0.4",
+		"next-themes": "^0.2.1",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"recma-import-images": "^0.0.3",
+		"rehype-autolink-headings": "^7.1.0",
+		"rehype-slug": "^6.0.0",
+		"remark-gfm": "^4.0.0",
+		"remark-rehype-wrap": "^0.0.3",
+		"remark-unwrap-images": "^4.0.0",
+		"shiki": "^0.14.7",
+		"tailwindcss": "^3.4.1",
+		"unist-util-visit": "^5.0.0"
+	},
+	"devDependencies": {
+		"eslint": "^8.56.0",
+		"eslint-config-next": "^14.2.4",
+		"prettier": "^3.3.2",
+		"prettier-plugin-tailwindcss": "^0.6.5",
+		"sharp": "0.33.1"
+	}
 }
