✨ Update Dockerfile for build process
- Added build arguments for API URL
- Refactored Dockerfile into base and runner stages

--- a/.github/workflows/build-only.yml
+++ b/.github/workflows/build-only.yml
@@ -29,3 +29,6 @@ jobs:
           context: .
           push: false
           tags: ${{ secrets.APP_IMAGE }}
+          file: ./Dockerfile
+          build-args: |
+            NEXT_PUBLIC_API_URL=${{ secrets.NEXT_PUBLIC_SITE_URL }}
