--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
 	"devDependencies": {
 		"eslint": "8.57.0",
 		"eslint-config-next": "14.2.4",
-		"husky": "^9.0.11",
-		"lint-staged": "^15.2.7",
+		"husky": "9.0.11",
+		"lint-staged": "15.2.7",
 		"prettier": "3.3.2",
 		"prettier-plugin-tailwindcss": "0.6.5",
 		"sharp": "0.33.4"
