--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -8,8 +8,7 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
       - name: Use Node.js 20.x
         uses: actions/setup-node@v4
         with:
@@ -17,11 +16,20 @@ jobs:
           node-version: 20.x
       - name: Install dependencies in production
         run: npm ci --ignore-scripts
-      - name: Build the app
-        continue-on-error: false
+      - name: Cache next.js build
+        id: cache-npm
+        uses: actions/cache@v4
+        with:
+          path: .next/
+          key: ${{ runner.os }}-next-build-${{ hashFiles('src/','public/','next*','package*','jsconfig.json') }}
+      - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
+        name: Build the app
+        continue-on-error: true
         run: npm run build
-      - name: List files
-        run: ls -la
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
