--- a/.github/workflows/build-only.yml
+++ b/.github/workflows/build-only.yml
@@ -16,8 +16,15 @@ jobs:
           node-version: 20.x
       - name: Install dependencies in production
         run: npm ci --ignore-scripts
-      - name: Build the app
-        continue-on-error: false
+      - name: Cache next.js build
+        id: cache-npm
+        uses: actions/cache@v4
+        with:
+          path: .next/
+          key: ${{ runner.os }}-next-build-${{ hashFiles('src/','public/','next*','package*','jsconfig.json') }}
+      - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
+        name: Build the app
+        continue-on-error: true
         run: npm run build
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
