--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,5 +1,9 @@
 name: Build and Deploy on prod
 
+env:
+  NEXT_PUBLIC_URL: ${{ secrets.NEXT_PUBLIC_SITE_URL }}
+  NODE_ENV: ${{ secrets.NODE_ENV }}
+
 on:
   push:
     branches: [main]
@@ -8,48 +12,31 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
       - name: Use Node.js 20.x
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
           cache: 'npm'
           node-version: 20.x
       - name: Install dependencies in production
         run: npm ci --ignore-scripts
-      - name: Cache next.js build
-        id: cache-npm
-        uses: actions/cache@v4
-        with:
-          path: .next/
-          key: ${{ runner.os }}-next-build-${{ hashFiles('src/','public/','next*','package*','jsconfig.json') }}
-      - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
-        name: Build the app
-        continue-on-error: true
+      - name: Build the app
+        continue-on-error: false
         run: npm run build
-      - name: List directory contents
+      - name: List files
         run: ls -la
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Just Build
+      - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
-          push: false
+          push: true
           tags: ${{ secrets.APP_IMAGE }}
-          file: ./Dockerfile
-          build-args: |
-            NEXT_PUBLIC_API_URL=${{ secrets.NEXT_PUBLIC_SITE_URL }}
-        env:
-          DOCKER_BUILDKIT: 1
-      - name: Display Docker build logs
-        if: failure()
-        run: docker buildx build . --progress=plain
+          build-args: NEXT_PUBLIC_URL=${{ secrets.NEXT_PUBLIC_SITE_URL }}
       - name: Deploy on cap rover
         run: docker run caprover/cli-caprover:latest caprover deploy --caproverUrl "${{ secrets.APP_URL }}" --appToken "${{ secrets.APP_TOKEN }}" --caproverApp "${{ secrets.APP_NAME }}" --imageName "${{ secrets.APP_IMAGE }}"
