--- a/package.json
+++ b/package.json
@@ -51,9 +51,7 @@
 		"remark-unwrap-images": "4.0.0",
 		"shiki": "0.14.7",
 		"tailwindcss": "3.4.4",
-		"unist-util-visit": "5.0.0"
-	},
-	"devDependencies": {
+		"unist-util-visit": "5.0.0",
 		"eslint": "8.57.0",
 		"eslint-config-next": "14.2.4",
 		"husky": "9.0.11",
